programs scrollbar fixed

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -132,16 +132,16 @@
   transition: bottom 0.3s ease;
   left: calc(50% - (290px / 2));
   // transform: translateX(-50%);
-  animation: fadeOut 0.3s ease-out forwards;
+  // animation: fadeOut 0.3s ease-out forwards;
 
-  @keyframes fadeOut { //можно ли применять?
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
+  // @keyframes fadeOut { //можно ли применять?
+  //   from {
+  //     opacity: 0;
+  //   }
+  //   to {
+  //     opacity: 1;
+  //   }
+  // }
 
   &::after {
     position: absolute;
